Set a fixed with icon list skill for a better alignment

--- a/src/components/Content/style.css
+++ b/src/components/Content/style.css
@@ -67,6 +67,10 @@
     justify-content: space-between;
 }
 
+.list-skills div {
+    width: 30px;
+}
+
 .list-skills svg {
     transition: all .5s;
 }
